namespace QuinntyneBrownStewardship.Application.Access;

public sealed class PasswordHashingOptions
{
    public int IterationCount { get; set; } = 210000;
}
